Improved CTRL+mouse/keyboard selection (bug 40983).  r=rods, sr=jst